# charm-refresh

./: .gitignore  .readthedocs.yaml  antora-playbook.yml  build-pr-preview.sh  build.sh  package.json  pyproject.toml
.github/workflows/: check_pr.yaml  ci.yaml  lint.yaml  release.yaml  release_docs.yaml
.github/workflows/_cli/: README.md  pyproject.toml
.github/workflows/_cli/cli/: check_version_prefix.py  create_version_tag.py  create_version_tag_and_branch.py
charm_refresh/: __init__.py  _main.py
docs/: antora.yml  requirements_and_user_experience.md
docs/modules/ROOT/: nav.adoc
docs/modules/ROOT/pages/: add-to-charm.adoc  contact.adoc  glossary.adoc  index.adoc  juju-refresh.adoc  product-requirements.adoc  refresh-versions-toml.adoc  troubleshoot.adoc  user-experience.adoc
docs/modules/ROOT/partials/: app-status-rev.adoc  app-status.adoc  glossary.adoc  highest-unit-status.adoc  juju-refresh.adoc  product-requirements.adoc  unit-statuses.adoc
docs/modules/add-to-charm/: nav.adoc
docs/modules/add-to-charm/examples/: actions.yaml  config.yaml
docs/modules/add-to-charm/pages/: actions-yaml.adoc  add-charm-refresh.adoc  add-charm-specific-fields.adoc  backwards-compatibility.adoc  charm-specific.adoc  charm-version.adoc  config-yaml.adoc  difficulty-increase-1.adoc  glossary.adoc  httpx-logger-level.adoc  in-progress.adoc  instantiate.adoc  is-compatible.adoc  is-this-for-you.adoc  juju-refresh.adoc  kubernetes-juju-app-not-trusted.adoc  log-format.adoc  metadata-yaml.adoc  move-instantiation.adoc  next-unit-allowed-to-refresh.adoc  peer-relation-not-ready.adoc  pre-refresh-checks.adoc  product-requirements.adoc  public-interface.adoc  refresh-snap.adoc  refresh-versions-toml.adoc  remove-duplicate-hardcoded-snap.adoc  remove-set-workload-version.adoc  status.adoc  unit-tearing-down.adoc  user-docs-url.adoc  workload-allowed-to-start.adoc
supplemental-ui/helpers/: nav-prev-next.js
supplemental-ui/partials/: head-meta.hbs  header-content.hbs  pagination.hbs
(+13 files in other folders)
