[tool.poetry]
name = "charm-refresh"
version = "0.1.0"
description = "In-place rolling refreshes of stateful charmed applications "
authors = ["Carl Csaposs <carl.csaposs@canonical.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8"
packaging = ">=24.1"
charm-api = ">=0.1.1"
charm-json = ">=0.1.1"
ops = ">=2.9.0"
lightkube = ">=0.15.4"
tomli = ">=2.0.1"
pyyaml = ">=6.0.2"
httpx = ">=0.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py38"
line-length = 100

[tool.ruff.lint]
extend-select = ["I", "UP"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Unused import
